workloads/kube-hello-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-hello-app
  labels:
    app: kube-hello-app
spec:
  selector:
    app: kube-hello-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
