workloads/kube-hello-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-hello-app
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hello.k3s.dgkim.net
      secretName: kube-hello-app-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-hello-app
                port:
                  number: 80
    - host: hello.k3s.dgkim.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-hello-app
                port:
                  number: 80
